Project

General

Profile

Actions

Bug #47908

closed

GC perfcounter fails to update when deletion occurs

Added by Pritha Srivastava over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Querying gc_retire_object in the RGW daemon socket shows zeroes


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #47956: octopus: GC perfcounter fails to update when deletion occurs ResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Status changed from In Progress to Pending Backport
Actions #2

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47956: octopus: GC perfcounter fails to update when deletion occurs added
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF