rgw/gc: fix for incrementing the perf counter 'gc_retire_object' in the new gc queue code for omap offload, when gc objects from queue are deleted. This was missed out initially.

Fixes: https://tracker.ceph.com/issues/47908

Signed-off-by: Pritha Srivastava <prsrivas@redhat.com>